--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -3,9 +3,8 @@ trigger:
     include:
     - main
     - release/*
-    - net7.0
+    - net9.0
     - net8.0
-    - loc
   tags:
     include:
     - '*'
@@ -28,7 +27,7 @@ pr:
     include:
     - main
     - release/*
-    - net7.0
+    - net9.0
     - net8.0
   paths:
     include:
@@ -43,13 +42,6 @@ pr:
     - README.md
     - SECURITY.md
     - THIRD-PARTY-NOTICES.TXT
-
-schedules:
-- cron: "0 0 * * *"
-  displayName: Daily midnight build
-  branches:
-    include:
-    - main
 
 variables:
   - template: /eng/pipelines/common/variables.yml
@@ -75,24 +67,24 @@ parameters:
     type: object
     default:
       - name: Windows
-        poolName: $(windowsNet6VmPool)
-        vmImage: $(windowsNet6VmImage)
+        poolName: $(windowsVmPool)
+        vmImage: $(windowsVmImage)
         artifact: build-windows
       - name: macOS
-        poolName: $(macOSXNet6VmPool)
-        vmImage: $(macOSXNet6VmImage)
+        poolName: $(macOSXVmPool)
+        vmImage: $(macOSXVmImage)
         artifact: build-macos
  
   - name: PackPlatforms
     type: object
     default:
       - name: Windows
-        poolName: $(windowsNet6VmPool)
-        vmImage: $(windowsNet6VmImage)
+        poolName: $(windowsVmPool)
+        vmImage: $(windowsVmImage)
         artifact: nuget
       - name: macOS
-        poolName: $(macOSXNet6VmPool)
-        vmImage: $(macOSXNet6VmImage)
+        poolName: $(macOSXVmPool)
+        vmImage: $(macOSXVmImage)
         artifact: nuget-macos
 
   - name: RunTemplatePlatforms
