--- a/src/Controls/tests/TestCases.Mac.Tests/Controls.TestCases.Mac.Tests.csproj
+++ b/src/Controls/tests/TestCases.Mac.Tests/Controls.TestCases.Mac.Tests.csproj
@@ -9,45 +9,10 @@
     <DefineConstants>$(DefineConstants);MACCATALYST;MACUITEST</DefineConstants>
   </PropertyGroup>
   
-  <ItemGroup>
-    <PackageReference Include="Appium.WebDriver" Version="5.0.0" />
-    <PackageReference Include="NUnit" Version="4.0.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Controls\src\Core\Controls.Core.csproj" />
-    <ProjectReference Include="..\..\..\Core\src\Core.csproj" />
-    <ProjectReference Include="..\..\..\Graphics\src\Graphics\Graphics.csproj" />
-  </ItemGroup>
+  <Import Project="..\AppiumTests.targets" />
   
   <ItemGroup>
-    <ProjectReference Include="..\..\..\TestUtils\src\UITest.Appium\UITest.Appium.csproj" />
-    <ProjectReference Include="..\..\..\TestUtils\src\UITest.Core\UITest.Core.csproj" />
-    <ProjectReference Include="..\..\..\TestUtils\src\UITest.NUnit\UITest.NUnit.csproj" />
-    <ProjectReference Include="..\..\..\TestUtils\src\UITest.Analyzers\UITest.Analyzers.csproj"
-      PrivateAssets="all"
-      ReferenceOutputAssembly="false"
-      OutputItemType="Analyzer" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(UseLocalVisualTestUtils) == ''">
-    <PackageReference Include="VisualTestUtils.MagickNet" Version="0.9.46-beta" />
-    <PackageReference Include="VisualTestUtils" Version="0.9.46-beta" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(UseLocalVisualTestUtils) != ''">
-    <ProjectReference Include="$(MauiRootDirectory)..\visual-test-utils\src\VisualTestUtils.MagickNet\VisualTestUtils.MagickNet.csproj" />
-    <ProjectReference Include="$(MauiRootDirectory)..\visual-test-utils\src\VisualTestUtils\VisualTestUtils.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Compile Include="..\TestCases.Shared.Tests\**\*.cs" Exclude="..\TestCases.Shared.Tests\obj\**;..\TestCases.Shared.Tests\bin\**" LinkBase="Shared" Visible="false" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Controls\tests\CustomAttributes\Controls.CustomAttributes.csproj" />
-    <Using Include="Microsoft.Maui.Controls.CustomAttributes" />
   </ItemGroup>
 
 </Project>
