[ci] Fix when pushing artifacts on uitests samples

--- a/eng/pipelines/common/ui-tests-build-sample.yml
+++ b/eng/pipelines/common/ui-tests-build-sample.yml
@@ -61,9 +61,17 @@ steps:
     continueOnError: true
 
   - publish: $(System.DefaultWorkingDirectory)/artifacts/bin
-    condition: ne('${{ parameters.platform }}' , 'windows')
+    condition: and(ne('${{ parameters.platform }}' , 'windows'), succeeded())
     artifact: ui-tests-samples
 
   - publish: $(System.DefaultWorkingDirectory)/artifacts/bin
-    condition: eq('${{ parameters.platform }}' , 'windows')
+    condition: and(eq('${{ parameters.platform }}' , 'windows'), succeeded())
     artifact: ui-tests-samples-windows
+
+  - publish: $(System.DefaultWorkingDirectory)/artifacts/bin
+    condition: and(ne('${{ parameters.platform }}' , 'windows'), failed())
+    artifact: ui-tests-samples_failed_$(System.JobAttempt)
+
+  - publish: $(System.DefaultWorkingDirectory)/artifacts/bin
+    condition: and(eq('${{ parameters.platform }}' , 'windows'), failed())
+    artifact: ui-tests-samples-windows_failed_$(System.JobAttempt)
