--- a/src/Compatibility/ControlGallery/src/Directory.Build.props
+++ b/src/Compatibility/ControlGallery/src/Directory.Build.props
@@ -3,6 +3,7 @@
     <SampleProject>true</SampleProject>
     <UseMaui Condition=" '$(UseWorkload)' == 'true' ">true</UseMaui>
     <DefaultXamlRuntime Condition=" '$(UseWorkload)' != 'true' ">Maui</DefaultXamlRuntime>
+    <NoWarn>$(NoWarn);CS0672</NoWarn>
   </PropertyGroup>
   <Import Project="../../../../Directory.Build.props" />
 </Project>
