--- a/src/Compatibility/ControlGallery/src/Android/Compatibility.ControlGallery.Android.csproj
+++ b/src/Compatibility/ControlGallery/src/Android/Compatibility.ControlGallery.Android.csproj
@@ -9,7 +9,7 @@
     <IsPackable>false</IsPackable>
     <Nullable>disable</Nullable>
     <!--<DefineConstants>$(DefineConstants);HAVE_OPENTK</DefineConstants>-->
-    <NoWarn>IL2036;0618;0612</NoWarn>
+    <NoWarn>IL2036;0618;0612;CS0672;CS0618</NoWarn>
   </PropertyGroup>
 
   <!--
