--- a/src/Compatibility/Maps/src/Android/Compatibility.Maps.Android.csproj
+++ b/src/Compatibility/Maps/src/Android/Compatibility.Maps.Android.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Microsoft.Maui.Controls.Compatibility.Maps.Android</RootNamespace>
     <IsPackable>false</IsPackable>
     <Nullable>disable</Nullable>
+    <NoWarn>$(NoWarn);CS0672;CS0618</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
