--- a/NuGet.config
+++ b/NuGet.config
@@ -4,14 +4,7 @@
   <!-- `clear` ensures no additional sources are inherited from another config file. -->
   <packageSources>
     <clear />
-    <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
-    <!--  Begin: Package sources from dotnet-emsdk -->
-    <!--  End: Package sources from dotnet-emsdk -->
-    <!--  Begin: Package sources from dotnet-runtime -->
-    <!--  End: Package sources from dotnet-runtime -->
-    <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
-    <add key="local" value="LOCAL_PLACEHOLDER" />
-    <add key="nuget-only" value="NUGET_ONLY_PLACEHOLDER" />
+   
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" protocolVersion="3" />
     <add key="dotnet-eng" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-eng/nuget/v3/index.json" protocolVersion="3" />
     <add key="dotnet-public" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-public/nuget/v3/index.json" protocolVersion="3" />
@@ -28,15 +21,14 @@
     <add key="darc-pub-dotnet-android-45bb7f3" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-45bb7f36/nuget/v3/index.json" />
     <!-- Added manually for .NET 8 iOS -->
     <add key="darc-pub-xamarin-xamarin-macios-a8d7eab" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-a8d7eab2/nuget/v3/index.json" />
+    
+    <add key="dotnet-libraries" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
+    <add key="dotnet-libraries-transport" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries-transport/nuget/v3/index.json" />
+    <add key="vs-buildservices" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/vs-buildservices/nuget/v3/index.json" />
+  
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
-  <disabledPackageSources>
-    <add key="local" value="true" />
-    <add key="nuget-only" value="true" />
-  </disabledPackageSources>
-  <!-- Define mappings by adding package patterns beneath the target source. -->
-  <!-- Some packages will restore from different locations, but most will be from `dotnet-public`. -->
-  <!-- The key value for <packageSource> should match key values from <packageSources> element. -->
+ 
 </configuration>
