--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -14,4 +14,62 @@
     <FileExtensionSignInfo Include=".msi" CertificateName="MicrosoftDotNet500" />
   </ItemGroup>
 
+  <ItemGroup>
+    <FileSignInfo Include="GMap.NET.Core.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="GMap.NET.GTK.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="webkit-sharp.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Mono.Cecil.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Mono.Cecil.Mdb.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Mono.Cecil.Pdb.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Mono.Cecil.Rocks.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Svg.Skia.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Svg.Custom.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Svg.Model.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="ShimSkiaSharp.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Fizzler.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="ExCSS.dll" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="Newtonsoft.Json.dll" CertificateName="3PartySHA2" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <FirstParty Include="Microsoft.Maui.dll" />
+    <FirstParty Include="Microsoft.Maui.*.dll" />
+    <FirstParty Include="FormsViewGroup.dll" />
+    <FirstParty Include="Microsoft.AspNetCore.Components.WebView.*.dll" />
+    <FirstParty Include="Microsoft.Extensions*.dll" />
+    <FirstParty Include="System.CodeDom.dll" />
+    <FirstParty Include="Microsoft.Bcl.AsyncInterfaces.dll" />
+    <FirstParty Include="System.Text.Json.dll" />
+    <FirstParty Include="System.Text.Encodings.Web.dll" />
+
+    <!-- SkiaSharp -->
+    <FirstParty Include="SkiaSharp*.dll" />
+    <FirstParty Include="HarfBuzzSharp*.dll" />
+    <!-- native -->
+    <FirstParty Include="libSkiaSharp.dll" />
+    <FirstParty Include="libHarfBuzzSharp.dll" />
+    <!-- ANGLE -->
+    <FirstParty Include="libEGL.dll" />
+    <FirstParty Include="libGLESv2.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ThirdPartyScript Include="OpenSans-Regular.ttf" />
+    <ThirdPartyScript Include="OpenSans-Semibold.ttf" />
+    <ThirdPartyScript Include="open-iconic.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Skip Include="NuGet.*.dll" />
+    <Skip Include="Mono.*.dll" />
+    <Skip Include="Microsoft.Build.*.dll" />
+    <Skip Include="System.Buffers.dll" />
+    <Skip Include="System.IO.UnmanagedMemoryStream.dll" />
+    <Skip Include="System.Memory.dll" />
+    <Skip Include="System.Numerics.Vectors.dll" />
+    <Skip Include="System.ObjectModel.dll" />
+    <Skip Include="System.Runtime.CompilerServices.Unsafe.dll" />
+  </ItemGroup>
+
 </Project>   
