--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -29,6 +29,9 @@
     <FileSignInfo Include="Fizzler.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="ExCSS.dll" CertificateName="3PartySHA2" />
     <FileSignInfo Include="Newtonsoft.Json.dll" CertificateName="3PartySHA2" />
+
+    <FileSignInfo Include="OpenSans-Regular.ttf" CertificateName="3PartySHA2" />
+    <FileSignInfo Include="OpenSans-Semibold.ttf" CertificateName="3PartySHA2" />
   </ItemGroup>
 
 
