--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ Directory.Build.Override.props
 
 # Only the "snapshots" directory should be added to Git, not the "snapshots-diff" directory
 snapshots-diff/
+.dotnet
