Try install .dotnet

--- a/src/DotNet/DotNet.csproj
+++ b/src/DotNet/DotNet.csproj
@@ -29,8 +29,8 @@
 
   <PropertyGroup>
     <_ProvisionDependsOn>
-      _DownloadDotNetInstallScript;
-      _InstallDotNet;
+      <!-- _DownloadDotNetInstallScript;
+      _InstallDotNet; -->
       _AcquireWorkloadManifests;
       _InstallWorkloadPacks;
     </_ProvisionDependsOn>
