--- a/eng/Signing.props
+++ b/eng/Signing.props
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FileExtensionSignInfo Update=".dll" CertificateName="MicrosoftDotNet500" />
     <FileExtensionSignInfo Update=".nupkg" CertificateName="NuGet" />
     <FileExtensionSignInfo Update=".zip" CertificateName="None" />
     <FileExtensionSignInfo Include=".msi" CertificateName="MicrosoftDotNet500" />
