--- a/eng/pipelines/device-tests.yml
+++ b/eng/pipelines/device-tests.yml
@@ -87,6 +87,14 @@ parameters:
       name: $(windowsTestsVmPool)
       vmImage: $(windowsTestsVmImage)
 
+  - name: targetFrameworks
+    type: object
+    default:
+      - tfm: net9.0
+        dependsOn: net8.0
+      - tfm: net8.0
+        dependsOn: ''
+
 resources:
   repositories:
     - repository: yaml-templates
@@ -96,7 +104,7 @@ resources:
       ref: refs/heads/main
 
 stages:
-
+- ${{ each targetFramework in parameters.targetFrameworks }}:
   - template: common/device-tests.yml
     parameters:
       androidPool: ${{ parameters.androidPool }}
@@ -104,6 +112,7 @@ stages:
       catalystPool: ${{ parameters.catalystPool }}
       windowsPool: ${{ parameters.windowsPool }}
       agentPoolAccessToken: $(AgentPoolAccessToken)
+      dotnetVersion: ${{ targetFramework }}
       ${{ if or(parameters.BuildEverything, and(ne(variables['Build.Reason'], 'PullRequest'), eq(variables['System.TeamProject'], 'devdiv'))) }}:
         androidApiLevels: [ 33, 30, 29, 28, 27, 26, 25, 24, 23 ]
         iosVersions: [ 'simulator-17.2']
